[project]
name = "advent_of_code_solver_restful_api"
#version = "2.0.0"
authors = [{ name = "Pete Dibdin" }]
description = "Advent of Code Solver RESTful API"
keywords = [
    "Advent of Code",
    "Advent",
    "Solver",
    "REST",
    "RESTful",
    "API",
    "Python",
    "Advent",
    "AWS",
    "Lambda",
]
readme = "README.md"
license = { file = "license.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Natural Language :: English",
]
dependencies = [
    "Flask==2.3.2",
    "apig-wsgi==2.18.0",
    "numpy==1.25.1",
    "requests==2.31.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/pjd199/advent_of_code_python"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["advent_of_code"]

[tool.setuptools_scm]

[tool.ruff]
select = [
    "E",   # pycodestyle error
    "F",   # pyflakes
    "B",   # bugbear
    "W",   # pycodestyle warning
    "C90", # mccabe complexity
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quote
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    #"PL", # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy-specific-rules
    "PERF", # perflint
    "RUF",  # ruff-specific-rules

]
ignore = [
    "B905",   # `zip()` without an explicit `strict=` parameter
    "ANN101", # Missing type annotation for `self` in method
]
fixable = ["ALL"]
src = ["advent_of_code", "tests"]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101", # Use of `assert` detected
    "S603", # `subprocess` call: check for execution of untrusted input
]
"runner.py" = [
    "T201", # print found
]
"daily_helper.py" = [
    "T201", # print found
]
"display_timer.py" = [
    "T201", # print found
]
"development_server.py" = [
    "T201", # print found
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pydoclint]
style = "google"
allow-init-docstring = true
